--- a/app/src/main/res/layout/activity_import_wallet_list.xml
+++ b/app/src/main/res/layout/activity_import_wallet_list.xml
@@ -6,6 +6,9 @@
     android:layout_height="match_parent"
     tools:context=".ImportWallet.ImportWalletList">
 
+    <include layout="@layout/toolbar"
+        android:id="@+id/toolbar"/>
+
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
