--- a/app/src/main/res/layout/fragment_d_e_x.xml
+++ b/app/src/main/res/layout/fragment_d_e_x.xml
@@ -1,14 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".MainFragments.DEXFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:id="@+id/tabLt"
+        android:background="@color/dark_green"
+        android:layout_height="wrap_content">
+
+        <com.google.android.material.tabs.TabLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:background="@color/dark_green"
+            android:layout_centerHorizontal="true"
+            app:tabSelectedTextColor="@color/white"
+            app:tabTextColor="@color/black"
+            android:textAlignment="center"
+            app:tabMode="fixed"
+            app:tabIndicatorGravity="stretch"
+            app:tabTextAppearance="@style/CustomTabText"
+            app:tabGravity="fill"
+            app:tabIndicatorAnimationMode="elastic"
+            app:tabIndicator="@drawable/tablayout_back_select"
+            android:id="@+id/tab_layoutDex" />
+
+    </RelativeLayout>
+
+
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_below="@id/tabLt"
+        android:id="@+id/frame_id">
 
-</FrameLayout>
+        <androidx.viewpager.widget.ViewPager
+            android:layout_width="match_parent"
+            android:layout_marginTop="2dp"
+            android:background="@color/silver"
+            android:layout_height="match_parent"
+            android:id="@+id/viewPageDex" />
+    </FrameLayout>
+
+</RelativeLayout>
