--- a/app/src/main/res/layout/fragment_wallet.xml
+++ b/app/src/main/res/layout/fragment_wallet.xml
@@ -45,8 +45,8 @@
                 android:layout_marginEnd="10dp"
                 android:layout_centerVertical="true"
                 android:layout_alignParentEnd="true"
-                android:src="@drawable/ic_notifications"
-                android:id="@+id/notification_icon2"/>
+                android:src="@drawable/ic_baseline_filter"
+                android:id="@+id/filter_icon"/>
 
         </RelativeLayout>
 
