--- a/app/src/main/res/layout/fragment_wallet_token.xml
+++ b/app/src/main/res/layout/fragment_wallet_token.xml
@@ -5,7 +5,6 @@
     android:layout_height="match_parent"
     tools:context=".MainFragments.WalletTokenFragment">
 
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -33,32 +32,34 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_gravity="center"
             android:layout_marginTop="15dp"
+            android:layout_marginStart="40dp"
+            android:layout_marginEnd="40dp"
             android:layout_height="wrap_content">
 
-            <LinearLayout
+            <RelativeLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_toStartOf="@+id/receiveLt"
-                android:orientation="vertical">
+                android:layout_alignParentStart="true">
 
                 <ImageView
+                    android:id="@+id/sendArrow"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
+                    android:layout_centerHorizontal="true"
                     android:src="@drawable/ic_arrow_downward"
-                    android:layout_marginEnd="40dp"
                     android:background="@drawable/circle_background"
                     android:padding="5dp"/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Send"
-                    android:layout_gravity="center"
+                    android:layout_centerHorizontal="true"
+                    android:layout_below="@id/sendArrow"
                     android:textColor="@color/white"/>
-            </LinearLayout>
+            </RelativeLayout>
 
-            <LinearLayout
+            <RelativeLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/receiveLt"
@@ -66,8 +67,10 @@
                 android:orientation="vertical">
 
                 <ImageView
+                    android:id="@+id/receiveArrow"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
+                    android:layout_centerHorizontal="true"
                     android:src="@drawable/ic_arrow_upward"
                     android:background="@drawable/circle_background"
                     android:padding="5dp"/>
@@ -75,20 +78,21 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Receive"
-                    android:layout_gravity="center"
+                    android:layout_centerHorizontal="true"
+                    android:layout_below="@id/receiveArrow"
                     android:textColor="@color/white"/>
-            </LinearLayout>
+            </RelativeLayout>
 
-            <LinearLayout
+            <RelativeLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_toEndOf="@+id/receiveLt"
-                android:layout_marginStart="40dp"
-                android:orientation="vertical">
+                android:layout_alignParentEnd="true">
 
                 <ImageView
+                    android:id="@+id/buyIcon"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
+                    android:layout_centerHorizontal="true"
                     android:src="@drawable/ic_baseline_local_offer_24"
                     android:background="@drawable/circle_background"
                     android:padding="8dp"/>
@@ -96,26 +100,21 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="buy"
-                    android:layout_gravity="center"
+                    android:layout_below="@id/buyIcon"
                     android:textColor="@color/white"/>
-            </LinearLayout>
+            </RelativeLayout>
 
         </RelativeLayout>
 
 
     </LinearLayout>
 
-    <LinearLayout
+    <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:id="@+id/preWalletCoinRecycler"
         android:layout_below="@id/topWalletLayout"
-        android:orientation="vertical">
-
-        <include layout="@layout/sample_wallet_coin"/>
-        <include layout="@layout/sample_wallet_coin"/>
-        <include layout="@layout/sample_wallet_coin"/>
-
-    </LinearLayout>
+        android:padding="0dp"/>
 
 
 
