--- a/app/src/main/res/layout/fragment_d_e_x.xml
+++ b/app/src/main/res/layout/fragment_d_e_x.xml
@@ -14,17 +14,21 @@
         android:layout_height="wrap_content">
 
         <com.google.android.material.tabs.TabLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="200dp"
+            android:layout_height="30dp"
+            android:padding="3dp"
+            android:layout_marginBottom="7dp"
+            android:layout_marginTop="7dp"
             android:layout_centerVertical="true"
-            android:background="@color/dark_green"
+            android:background="@drawable/tab_layout_back"
             android:layout_centerHorizontal="true"
             app:tabSelectedTextColor="@color/white"
             app:tabTextColor="@color/black"
             android:textAlignment="center"
+            style="@style/AppTabLayout"
+            app:tabTextAppearance="@style/AppTabTextAppearance"
             app:tabMode="fixed"
             app:tabIndicatorGravity="stretch"
-            app:tabTextAppearance="@style/CustomTabText"
             app:tabGravity="fill"
             app:tabIndicatorAnimationMode="elastic"
             app:tabIndicator="@drawable/tablayout_back_select"
