--- a/app/src/main/res/layout/fragment_wallet.xml
+++ b/app/src/main/res/layout/fragment_wallet.xml
@@ -6,11 +6,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".MainFragments.WalletFragment">
 
+    <androidx.appcompat.widget.Toolbar
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/dark_green"
+        android:id="@+id/walletTb">
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:id="@+id/tabLt"
             android:background="@color/dark_green"
+            android:padding="2dp"
             android:layout_height="wrap_content">
 
             <ImageView
@@ -18,22 +23,24 @@
                 android:layout_height="30dp"
                 android:layout_alignParentStart="true"
                 android:layout_centerVertical="true"
-                android:layout_marginStart="10dp"
                 android:src="@drawable/ic_notifications"
                 android:id="@+id/notification_icon"/>
 
             <com.google.android.material.tabs.TabLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
                 android:layout_centerVertical="true"
-                android:background="@color/dark_green"
+                android:layout_marginEnd="100dp"
+                android:padding="3dp"
+                android:background="@drawable/tab_layout_back"
                 android:layout_centerHorizontal="true"
                 app:tabSelectedTextColor="@color/white"
                 app:tabTextColor="@color/black"
                 android:textAlignment="center"
+                style="@style/AppTabLayout"
+                app:tabTextAppearance="@style/AppTabTextAppearance"
                 app:tabMode="fixed"
                 app:tabIndicatorGravity="stretch"
-                app:tabTextAppearance="@style/CustomTabText"
                 app:tabGravity="fill"
                 app:tabIndicatorAnimationMode="elastic"
                 app:tabIndicator="@drawable/tablayout_back_select"
@@ -50,11 +57,13 @@
 
         </RelativeLayout>
 
+    </androidx.appcompat.widget.Toolbar>
+
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@id/tabLt"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/walletTb"
         android:id="@+id/frame_id">
 
         <androidx.viewpager.widget.ViewPager
