--- a/app/src/main/res/layout/slide_layout.xml
+++ b/app/src/main/res/layout/slide_layout.xml
@@ -11,6 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="300dp"
         android:layout_marginStart="70dp"
+        android:padding="30dp"
         android:layout_marginTop="47dp"
         android:layout_marginEnd="61dp"
         android:contentDescription="TODO"
